# algas

./: .clang-format-ignore  .clang-tidy  .gitignore  README.md  algas.cpp  meson.build  salsa.cpp  sasi.cpp  sasi.sublime-project.in
.github/workflows/: ci_meson.yml
contrib/: meson.build
scripts/: plot_histogram.R
src/: meson.build  sasi.cpp
src/include/algas/: fasta.hpp  structs.hpp  utils.hpp
src/include/salsa/: fasta.hpp  gap.hpp  sequence.hpp  structs.hpp  utils.hpp
src/include/sasi/: fasta.hpp  gap.hpp  output.hpp  sequence.hpp  structs.hpp  utils.hpp
src/lib/: fasta.cpp  gap.cpp  meson.build  output.cpp  sequence.cpp  utils.cpp
testdata/: aligned-001.fasta  aligned-002.fasta  aligned-003.fasta  aligned-10k.fasta  aligned-20k.fasta  aligned-40k.fasta
tests/: libsasi-doctest-tests.txt  libsasi-doctest.cc  meson.build
